--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0"
   }
