--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "openai": "^4.52.7"
   }
 }
